assets/css/common/global.css
/**
 * Global CSS rules
 *
 * @author Pierre HUBERT
 */

/**
 * <a> elements
 */
a, .cursor-pointer {
    cursor: pointer;
}

/**
 * <a> like elements
 */
.a {
    cursor: pointer;
    outline: none;
    text-decoration: none;
    color: #3c8dbc;
}

.a:focus, .a:hover {
    color: #72afd2;
}

.cursor-pointer {
    cursor: pointer;
}

/**
 * Sceditor iframe
 */
.sceditor-iframe-body {
    padding: 5px;
    padding-bottom: 0px;
}

#pageTarget {
    display: flex;
    flex-direction: column;
}

/**
 * Adapt menu bar to small screens
 */
@media screen and (max-width: 767px) {
    #pageTarget {
        margin-top: 50px;
    }
}

